[gd_scene load_steps=18 format=4 uid="uid://b1auag8jieaci"]

[ext_resource type="Script" uid="uid://bc7035qnfcdgm" path="res://Scenes/Levels/L_1/l_1.gd" id="1_6oxlt"]
[ext_resource type="PackedScene" uid="uid://cqqns4lbmyko6" path="res://Scenes/Levels/Blue.tscn" id="3_c0yjq"]
[ext_resource type="PackedScene" uid="uid://b03jc4v8kasvy" path="res://Scenes/Levels/Red.tscn" id="4_ma0hv"]
[ext_resource type="PackedScene" uid="uid://chqk46eexaulh" path="res://Scenes/Car-1/Car-1.tscn" id="5_nwqfi"]
[ext_resource type="Texture2D" uid="uid://cyyehvcjqhs27" path="res://Assets/stringstar fields/background_0.png" id="6_s16mn"]
[ext_resource type="Texture2D" uid="uid://bksh1me63vrw1" path="res://Assets/stringstar fields/background_1.png" id="7_2clef"]
[ext_resource type="Texture2D" uid="uid://4c1115hf6ks6" path="res://Assets/stringstar fields/tileset.png" id="8_6oxlt"]
[ext_resource type="Texture2D" uid="uid://dm7b2ar52skf5" path="res://Assets/stringstar fields/background_2.png" id="8_is7fd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_alhqi"]
size = Vector2(67.5753, 67.576)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_176xa"]

[sub_resource type="Animation" id="Animation_h76b7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_c0yjq"]
resource_name = "en"
length = 2.0
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_6oxlt"]
resource_name = "st"
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasModulate:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h76b7"]
_data = {
&"RESET": SubResource("Animation_h76b7"),
&"en": SubResource("Animation_c0yjq"),
&"st": SubResource("Animation_6oxlt")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6oxlt"]
size = Vector2(40, 241)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_h76b7"]
texture = ExtResource("8_6oxlt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
6:7/0 = 0
7:7/0 = 0
9:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0

[sub_resource type="TileSet" id="TileSet_c0yjq"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_h76b7")

[node name="L-1" type="Node2D"]
script = ExtResource("1_6oxlt")

[node name="car-1" parent="." instance=ExtResource("5_nwqfi")]
position = Vector2(-67, 153)

[node name="Blocks" type="Node2D" parent="."]

[node name="1" parent="Blocks" instance=ExtResource("3_c0yjq")]
z_index = -1
position = Vector2(376, 170)
rotation = 3.14159
scale = Vector2(0.295965, 0.295965)

[node name="in" type="Area2D" parent="Blocks/1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/1/in"]
position = Vector2(0.00012207, -6.10352e-05)
shape = SubResource("RectangleShape2D_alhqi")

[node name="2" parent="Blocks" instance=ExtResource("4_ma0hv")]
z_index = -1
position = Vector2(416, 129)
scale = Vector2(0.295965, 0.295965)

[node name="out" type="Area2D" parent="Blocks/2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/2/out"]
position = Vector2(0.00012207, -6.10352e-05)
shape = SubResource("RectangleShape2D_alhqi")

[node name="3" parent="Blocks" instance=ExtResource("3_c0yjq")]
z_index = -1
position = Vector2(587, 185)
rotation = 3.14159
scale = Vector2(0.295965, 0.295965)

[node name="in_3" type="Area2D" parent="Blocks/3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/3/in_3"]
position = Vector2(0.00012207, -6.10352e-05)
shape = SubResource("RectangleShape2D_alhqi")

[node name="4" parent="Blocks" instance=ExtResource("4_ma0hv")]
z_index = -1
position = Vector2(649, 106)
scale = Vector2(0.295965, 0.295965)

[node name="out_4" type="Area2D" parent="Blocks/4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blocks/4/out_4"]
position = Vector2(0.00012207, -6.10352e-05)
shape = SubResource("RectangleShape2D_alhqi")

[node name="Bg" type="Node2D" parent="."]
z_index = -2

[node name="Background0" type="Sprite2D" parent="Bg"]
z_index = -1
position = Vector2(425, 137)
scale = Vector2(7.71761, 7.71761)
texture = ExtResource("6_s16mn")

[node name="Background1" type="Sprite2D" parent="Bg"]
z_index = -1
position = Vector2(425, 137)
scale = Vector2(7.71761, 7.71761)
texture = ExtResource("7_2clef")

[node name="Background2" type="Sprite2D" parent="Bg"]
z_index = -1
position = Vector2(425, 137)
scale = Vector2(7.71761, 7.71761)
texture = ExtResource("8_is7fd")

[node name="Death" type="Node2D" parent="."]

[node name="death" type="Area2D" parent="Death"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Death/death"]
position = Vector2(0, 340)
shape = SubResource("WorldBoundaryShape2D_176xa")
debug_color = Color(0.990193, 0, 0.281361, 0.42)

[node name="Timer" type="Timer" parent="."]

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h76b7")
}

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0, 0, 0, 1)

[node name="Next" type="Area2D" parent="."]
position = Vector2(784, 128)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Next"]
position = Vector2(-10, 37.5)
shape = SubResource("RectangleShape2D_6oxlt")
debug_color = Color(0, 0.635382, 0.417872, 0.42)

[node name="Ground" type="TileMapLayer" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="Ground"]
tile_map_data = PackedByteArray("AAAFAAoAAAAAAAkAAAAGAAoAAAAAAAkAAAAHAAoAAAAAAAkAAAAHAAsAAAAAAAkAAAAIAAsAAAAAAAkAAAAJAAsAAAAAAAkAAAAKAAsAAAAAAAkAAAALAAsAAAAAAAkAAAAMAAsAAAAAAAkAAAANAAsAAAAAAAkAAAAOAAsAAAAAAAkAAAAPAAsAAAAAAAkAAAAQAAsAAAAAAAkAAAARAAsAAAAAAAkAAAASAAsAAAAAAAkAAAATAAsAAAAAAAkAAAAUAAsAAAAAAAkAAAAVAAsAAAAAAAkAAAAVAAwAAAAAAAkAAAAWAAwAAAAAAAkAAAAXAAwAAAAAAAkAAAAXAAsAAAAAAAkAAAAYAAsAAAAAAAkAAAAYAAoAAAAAAAkAAAAZAAoAAAAAAAkAAAAZAAsAAAAAAAkAAAAZAAwAAAAAAAkAAAAYAAwAAAAAAAkAAAAUAAwAAAAAAAkAAAATAAwAAAAAAAkAAAASAAwAAAAAAAkAAAARAAwAAAAAAAkAAAAQAAwAAAAAAAkAAAAPAAwAAAAAAAkAAAAOAAwAAAAAAAkAAAANAAwAAAAAAAkAAAAMAAwAAAAAAAkAAAALAAwAAAAAAAkAAAAKAAwAAAAAAAkAAAAJAAwAAAAAAAkAAAAIAAwAAAAAAAkAAAAHAAwAAAAAAAkAAAAGAAwAAAAAAAkAAAAFAAwAAAAAAAkAAAAFAAsAAAAAAAkAAAAGAAsAAAAAAAkAAAAWAAsAAAAAAAkAAAAYAAkAAAAAAAkAAAAYAAgAAAAAAAkAAAAZAAkAAAAAAAkAAAAZAAgAAAAAAAkAAAAaAAgAAAAAAAkAAAAaAAkAAAAAAAkAAAAaAAoAAAAAAAkAAAAaAAsAAAAAAAkAAAAaAAwAAAAAAAkAAAAbAAwAAAAAAAkAAAAbAAsAAAAAAAkAAAAbAAkAAAAAAAkAAAAbAAoAAAAAAAkAAAAcAAoAAAAAAAkAAAAcAAsAAAAAAAkAAAAcAAwAAAAAAAkAAAAdAAwAAAAAAAkAAAAeAAwAAAAAAAkAAAAfAAwAAAAAAAkAAAAgAAwAAAAAAAkAAAAhAAwAAAAAAAkAAAAiAAwAAAAAAAkAAAAjAAwAAAAAAAkAAAAkAAwAAAAAAAkAAAAlAAwAAAAAAAkAAAAmAAwAAAAAAAkAAAAmAAsAAAAAAAkAAAAmAAoAAAAAAAkAAAAmAAkAAAAAAAkAAAAmAAgAAAAAAAkAAAAlAAkAAAAAAAkAAAAlAAoAAAAAAAkAAAAlAAsAAAAAAAkAAAAlAA0AAAAAAAkAAAAlAA4AAAAAAAkAAAAlAAgAAAAAAAkAAAAkAAgAAAAAAAkAAAAkAAcAAAAAAAkAAAAlAAcAAAAAAAkAAAAmAAcAAAAAAAkAAAAmAA0AAAAAAAkAAAAmAA4AAAAAAAkAAAAkAA4AAAAAAAkAAAAjAA4AAAAAAAkAAAAiAA4AAAAAAAkAAAAhAA4AAAAAAAkAAAAhAA8AAAAAAAkAAAAgAA8AAAAAAAkAAAAfAA8AAAAAAAkAAAAeAA8AAAAAAAkAAAAdAA8AAAAAAAkAAAAcAA8AAAAAAAkAAAAbAA8AAAAAAAkAAAAaAA8AAAAAAAkAAAAZAA8AAAAAAAkAAAAYAA4AAAAAAAkAAAAXAA4AAAAAAAkAAAAWAA4AAAAAAAkAAAAVAA4AAAAAAAkAAAAUAA4AAAAAAAkAAAATAA4AAAAAAAkAAAASAA4AAAAAAAkAAAARAA4AAAAAAAkAAAAQAA4AAAAAAAkAAAAPAA4AAAAAAAkAAAAOAA4AAAAAAAkAAAANAA4AAAAAAAkAAAAMAA4AAAAAAAkAAAALAA4AAAAAAAkAAAAKAA4AAAAAAAkAAAAJAA4AAAAAAAkAAAAEAA0AAAAAAAkAAAAEAA4AAAAAAAkAAAAEAA8AAAAAAAkAAAAEABAAAAAAAAkAAAAEABEAAAAAAAkAAAAFAA0AAAAAAAkAAAAFAA4AAAAAAAkAAAAFAA8AAAAAAAkAAAAFABAAAAAAAAkAAAAFABEAAAAAAAkAAAAGAA0AAAAAAAkAAAAGAA4AAAAAAAkAAAAGAA8AAAAAAAkAAAAGABAAAAAAAAkAAAAGABEAAAAAAAkAAAAHAA0AAAAAAAkAAAAHAA4AAAAAAAkAAAAHAA8AAAAAAAkAAAAHABAAAAAAAAkAAAAHABEAAAAAAAkAAAAIAA0AAAAAAAkAAAAIAA4AAAAAAAkAAAAIAA8AAAAAAAkAAAAIABAAAAAAAAkAAAAIABEAAAAAAAkAAAAJAA0AAAAAAAkAAAAJAA8AAAAAAAkAAAAJABAAAAAAAAkAAAAJABEAAAAAAAkAAAAKAA0AAAAAAAkAAAAKAA8AAAAAAAkAAAAKABAAAAAAAAkAAAAKABEAAAAAAAkAAAALAA0AAAAAAAkAAAALAA8AAAAAAAkAAAALABAAAAAAAAkAAAALABEAAAAAAAkAAAAMAA0AAAAAAAkAAAAMAA8AAAAAAAkAAAAMABAAAAAAAAkAAAAMABEAAAAAAAkAAAANAA0AAAAAAAkAAAANAA8AAAAAAAkAAAANABAAAAAAAAkAAAANABEAAAAAAAkAAAAOAA0AAAAAAAkAAAAOAA8AAAAAAAkAAAAOABAAAAAAAAkAAAAOABEAAAAAAAkAAAAPAA0AAAAAAAkAAAAPAA8AAAAAAAkAAAAPABAAAAAAAAkAAAAPABEAAAAAAAkAAAAQAA0AAAAAAAkAAAAQAA8AAAAAAAkAAAAQABAAAAAAAAkAAAAQABEAAAAAAAkAAAARAA0AAAAAAAkAAAARAA8AAAAAAAkAAAARABAAAAAAAAkAAAARABEAAAAAAAkAAAASAA0AAAAAAAkAAAASAA8AAAAAAAkAAAASABAAAAAAAAkAAAASABEAAAAAAAkAAAATAA0AAAAAAAkAAAATAA8AAAAAAAkAAAATABAAAAAAAAkAAAATABEAAAAAAAkAAAAUAA0AAAAAAAkAAAAUAA8AAAAAAAkAAAAUABAAAAAAAAkAAAAUABEAAAAAAAkAAAAVAA0AAAAAAAkAAAAVAA8AAAAAAAkAAAAVABAAAAAAAAkAAAAVABEAAAAAAAkAAAAWAA0AAAAAAAkAAAAWAA8AAAAAAAkAAAAWABAAAAAAAAkAAAAWABEAAAAAAAkAAAAXAA0AAAAAAAkAAAAXAA8AAAAAAAkAAAAXABAAAAAAAAkAAAAXABEAAAAAAAkAAAAYAA0AAAAAAAkAAAAYAA8AAAAAAAkAAAAYABAAAAAAAAkAAAAYABEAAAAAAAkAAAAZAA0AAAAAAAkAAAAZAA4AAAAAAAkAAAAZABAAAAAAAAkAAAAZABEAAAAAAAkAAAAaAA0AAAAAAAkAAAAaAA4AAAAAAAkAAAAaABAAAAAAAAkAAAAaABEAAAAAAAkAAAAbAA0AAAAAAAkAAAAbAA4AAAAAAAkAAAAbABAAAAAAAAkAAAAbABEAAAAAAAkAAAAcAA0AAAAAAAkAAAAcAA4AAAAAAAkAAAAcABAAAAAAAAkAAAAcABEAAAAAAAkAAAAdAA0AAAAAAAkAAAAdAA4AAAAAAAkAAAAdABAAAAAAAAkAAAAdABEAAAAAAAkAAAAeAA0AAAAAAAkAAAAeAA4AAAAAAAkAAAAeABAAAAAAAAkAAAAeABEAAAAAAAkAAAAfAA0AAAAAAAkAAAAfAA4AAAAAAAkAAAAfABAAAAAAAAkAAAAfABEAAAAAAAkAAAAgAA0AAAAAAAkAAAAgAA4AAAAAAAkAAAAgABAAAAAAAAkAAAAgABEAAAAAAAkAAAAhAA0AAAAAAAkAAAAhABAAAAAAAAkAAAAhABEAAAAAAAkAAAAiAA0AAAAAAAkAAAAiAA8AAAAAAAkAAAAiABAAAAAAAAkAAAAiABEAAAAAAAkAAAAjAA0AAAAAAAkAAAAjAA8AAAAAAAkAAAAjABAAAAAAAAkAAAAjABEAAAAAAAkAAAAkAA0AAAAAAAkAAAAkAA8AAAAAAAkAAAAkABAAAAAAAAkAAAAkABEAAAAAAAkAAAAlAA8AAAAAAAkAAAAlABAAAAAAAAkAAAAlABEAAAAAAAkAAAAmAA8AAAAAAAkAAAAmABAAAAAAAAkAAAAmABEAAAAAAAkAAAAEAAoAAAAAAAkAAAAEAAsAAAAAAAkAAAAEAAwAAAAAAAkAAAAIAAoAAAAGAAUAABAJAAoAAAADAAQAAAAKAAoAAAAEAAQAAAALAAoAAAAJAAgAAAAMAAoAAAAFAAYAAAANAAoAAAABAAIAACAOAAoAAAABAAIAADAPAAoAAAAFAAYAAAAQAAoAAAAJAAcAAAARAAoAAAAEAAYAAAASAAoAAAAFAAYAAAATAAoAAAAAAAQAAAAUAAoAAAAAAAQAAAAVAAoAAAAAAAQAAAAWAAoAAAAFAAYAAAAXAAoAAAAFAAUAAAAiAAsAAAAFAAYAAAAjAAsAAAAGAAYAAAAkAAsAAAAFAAUAAAAhAAsAAAAGAAYAAAAfAAsAAAAGAAYAAAAgAAsAAAAFAAYAAAAdAAsAAAAGAAUAABAeAAsAAAAJAAgAAAAbAAgAAAAGAAUAABAcAAkAAAAGAAUAABAdAAoAAAADAAgAAFAjAAcAAAADAAgAAEAjAAgAAAADAAgAAEAXAAgAAAADAAgAAEAXAAkAAAADAAgAAEAYAAcAAAADAAgAABAZAAcAAAADAAgAABAaAAcAAAADAAgAABAkAAYAAAADAAgAABAlAAYAAAADAAgAABAmAAYAAAADAAgAABAEAAkAAAAAAAgAAAAFAAkAAAABAAgAAAAGAAkAAAACAAgAAAAHAAkAAAADAAgAAAADAAwAAAAAAAkAAAADAAsAAAAAAAkAAAADAAoAAAAAAAkAAAADAA8AAAAAAAkAAAADAA4AAAAAAAkAAAADAA0AAAAAAAkAAAADABEAAAAAAAkAAAADABAAAAAAAAkAAAAEABIAAAAEAAYAACAFABIAAAACAAIAAAAGABIAAAAGAAYAACAHABIAAAAEAAYAACAIABIAAAAFAAYAACAJABIAAAAGAAYAACAKABIAAAAEAAYAACALABIAAAAFAAYAACAMABIAAAAGAAYAACANABIAAAAEAAYAACAOABIAAAAFAAYAACAPABIAAAAGAAYAACAQABIAAAACAAIAAAARABIAAAAFAAYAACASABIAAAAGAAYAACATABIAAAAEAAYAACAUABIAAAAFAAYAACAVABIAAAAGAAYAACAWABIAAAAEAAYAACAXABIAAAACAAIAAAAYABIAAAAGAAYAACAZABIAAAAEAAYAACAaABIAAAAFAAYAACAbABIAAAAGAAYAACAcABIAAAAEAAYAACAdABIAAAAFAAYAACAeABIAAAAGAAYAACAfABIAAAAEAAYAACAgABIAAAAFAAYAACAhABIAAAAGAAYAACAiABIAAAAEAAYAACAjABIAAAAFAAYAACAkABIAAAAEAAYAACAlABIAAAAFAAYAACAmABIAAAAGAAYAACAnAAkAAAAEAAYAAHAnAAgAAAAFAAYAAHAnAAcAAAAGAAYAAHAnAAwAAAAEAAYAAHAnAAsAAAAFAAYAAHAnAAoAAAAGAAYAAHAnAA8AAAAGAAYAAHAnAA4AAAAFAAYAAHAnAA0AAAAGAAYAAHAnABEAAAAEAAYAAHAnABAAAAAFAAYAAHAEAAYAAAAAAAUAAAAEAAcAAAAAAAYAAAAEAAgAAAAAAAcAAAAFAAYAAAABAAUAAAAFAAcAAAABAAYAAAAFAAgAAAABAAcAAAAGAAYAAAACAAUAAAAGAAcAAAACAAYAAAAGAAgAAAACAAcAAAAHAAYAAAADAAUAAAAHAAcAAAADAAYAAAAHAAgAAAADAAcAAAAJAAkAAAADAAMAAAAKAAkAAAAEAAMAAAAFABMAAAACAAMAAAAFABQAAAACAAQAAAAQABMAAAACAAMAAAAQABQAAAACAAQAAAAXABMAAAACAAMAAAAXABQAAAACAAQAAAAkAAkAAAAFAAUAACAkAAoAAAAAAAQAAGAAAAoAAAAAAAkAAAAAAAsAAAAAAAkAAAAAAAwAAAAAAAkAAAAAAA0AAAAAAAkAAAAAAA4AAAAAAAkAAAAAAA8AAAAAAAkAAAAAABAAAAAAAAkAAAAAABEAAAAAAAkAAAABAAoAAAAAAAkAAAABAAsAAAAAAAkAAAABAAwAAAAAAAkAAAABAA0AAAAAAAkAAAABAA4AAAAAAAkAAAABAA8AAAAAAAkAAAABABAAAAAAAAkAAAABABEAAAAAAAkAAAABABIAAAAGAAYAACACAAoAAAAAAAkAAAACAAsAAAAAAAkAAAACAAwAAAAAAAkAAAACAA0AAAAAAAkAAAACAA4AAAAAAAkAAAACAA8AAAAAAAkAAAACABAAAAAAAAkAAAACABEAAAAAAAkAAAACABIAAAACAAIAAAACABMAAAACAAMAAAACABQAAAACAAQAAAADABIAAAAGAAYAACD+/woAAAAAAAkAAAD+/wsAAAAAAAkAAAD+/wwAAAAAAAkAAAD+/w0AAAAAAAkAAAD+/w4AAAAAAAkAAAD+/w8AAAAAAAkAAAD+/xAAAAAAAAkAAAD+/xEAAAAAAAkAAAD//woAAAAAAAkAAAD//wsAAAAAAAkAAAD//wwAAAAAAAkAAAD//w0AAAAAAAkAAAD//w4AAAAAAAkAAAD//w8AAAAAAAkAAAD//xAAAAAAAAkAAAD//xEAAAAAAAkAAAD//xIAAAAGAAYAACAAABIAAAACAAIAAAAAABMAAAACAAMAAAAAABQAAAACAAQAAAD8/woAAAAAAAkAAAD8/wsAAAAAAAkAAAD8/wwAAAAAAAkAAAD8/w0AAAAAAAkAAAD8/w4AAAAAAAkAAAD8/w8AAAAAAAkAAAD8/xAAAAAAAAkAAAD8/xEAAAAAAAkAAAD9/woAAAAAAAkAAAD9/wsAAAAAAAkAAAD9/wwAAAAAAAkAAAD9/w0AAAAAAAkAAAD9/w4AAAAAAAkAAAD9/w8AAAAAAAkAAAD9/xAAAAAAAAkAAAD9/xEAAAAAAAkAAAD9/xIAAAAGAAYAACD+/xIAAAACAAIAAAD+/xMAAAACAAMAAAD+/xQAAAACAAQAAAD6/woAAAAAAAkAAAD6/wsAAAAAAAkAAAD6/wwAAAAAAAkAAAD6/w0AAAAAAAkAAAD6/w4AAAAAAAkAAAD6/w8AAAAAAAkAAAD6/xAAAAAAAAkAAAD6/xEAAAAAAAkAAAD7/woAAAAAAAkAAAD7/wsAAAAAAAkAAAD7/wwAAAAAAAkAAAD7/w0AAAAAAAkAAAD7/w4AAAAAAAkAAAD7/w8AAAAAAAkAAAD7/xAAAAAAAAkAAAD7/xEAAAAAAAkAAAD7/xIAAAAGAAYAACD8/xIAAAACAAIAAAD8/xMAAAACAAMAAAD8/xQAAAACAAQAAAD4/woAAAAGAAYAAGD4/wsAAAAFAAYAAGD4/wwAAAAEAAYAAGD4/w0AAAAGAAYAAGD4/w4AAAAFAAYAAGD4/w8AAAAGAAYAAGD4/xAAAAAFAAYAAGD4/xEAAAAEAAYAAGD5/woAAAAAAAkAAAD5/wsAAAAAAAkAAAD5/wwAAAAAAAkAAAD5/w0AAAAAAAkAAAD5/w4AAAAAAAkAAAD5/w8AAAAAAAkAAAD5/xAAAAAAAAkAAAD5/xEAAAAAAAkAAAD5/xIAAAAEAAYAACD6/xIAAAACAAIAAAD6/xMAAAACAAMAAAD6/xQAAAACAAQAAAD5/wkAAAAEAAYAAAD6/wkAAAABAAQAABD7/wkAAAAAAAQAABD8/wkAAAABAAQAAAD9/wkAAAAFAAYAAAD+/wkAAAADAAQAAAD//wkAAAAEAAQAAAAAAAkAAAAFAAYAAAABAAkAAAAEAAYAAAACAAkAAAAFAAYAAAADAAkAAAAGAAYAAAD+/wgAAAADAAMAAAD//wgAAAAEAAMAAAApAAsAAAAGAAYAAGApAAwAAAAFAAYAAGApAA0AAAAEAAYAAGApAA4AAAAGAAYAAGApAA8AAAAFAAYAAGApABAAAAAGAAYAAGApABEAAAAFAAYAAGApABIAAAAEAAYAAGAqAAoAAAAAAAgAAAAqAAsAAAAAAAkAAAAqAAwAAAAAAAkAAAAqAA0AAAAAAAkAAAAqAA4AAAAAAAkAAAAqAA8AAAAAAAkAAAAqABAAAAAAAAkAAAAqABEAAAAAAAkAAAAqABIAAAAAAAkAAAAqABMAAAAEAAYAACArAAoAAAABAAgAAAArAAsAAAAAAAkAAAArAAwAAAAAAAkAAAArAA0AAAAAAAkAAAArAA4AAAAAAAkAAAArAA8AAAAAAAkAAAArABAAAAAAAAkAAAArABEAAAAAAAkAAAArABIAAAAAAAkAAAArABMAAAACAAIAAAArABQAAAACAAMAAAArABUAAAACAAQAAAAsAAoAAAACAAgAAAAsAAsAAAAAAAkAAAAsAAwAAAAAAAkAAAAsAA0AAAAAAAkAAAAsAA4AAAAAAAkAAAAsAA8AAAAAAAkAAAAsABAAAAAAAAkAAAAsABEAAAAAAAkAAAAsABIAAAAAAAkAAAAsABMAAAAGAAYAACAtAAoAAAADAAgAAAAtAAsAAAAAAAkAAAAtAAwAAAAAAAkAAAAtAA0AAAAAAAkAAAAtAA4AAAAAAAkAAAAtAA8AAAAAAAkAAAAtABAAAAAAAAkAAAAtABEAAAAAAAkAAAAtABIAAAAAAAkAAAAtABMAAAACAAIAAAAtABQAAAACAAMAAAAtABUAAAACAAQAAAAuAAoAAAAEAAgAAAAuAAsAAAAAAAkAAAAuAAwAAAAAAAkAAAAuAA0AAAAAAAkAAAAuAA4AAAAAAAkAAAAuAA8AAAAAAAkAAAAuABAAAAAAAAkAAAAuABEAAAAAAAkAAAAuABIAAAAAAAkAAAAuABMAAAAGAAYAACAvAAkAAAADAAMAAAAvAAoAAAAFAAgAAAAvAAsAAAAAAAkAAAAvAAwAAAAAAAkAAAAvAA0AAAAAAAkAAAAvAA4AAAAAAAkAAAAvAA8AAAAAAAkAAAAvABAAAAAAAAkAAAAvABEAAAAAAAkAAAAvABIAAAAAAAkAAAAvABMAAAACAAIAAAAvABQAAAACAAMAAAAvABUAAAACAAQAAAAwAAkAAAAEAAMAAAAwAAoAAAAGAAgAAAAwAAsAAAAAAAkAAAAwAAwAAAAAAAkAAAAwAA0AAAAAAAkAAAAwAA4AAAAAAAkAAAAwAA8AAAAAAAkAAAAwABAAAAAAAAkAAAAwABEAAAAAAAkAAAAwABIAAAAAAAkAAAAwABMAAAAGAAYAACAxAAoAAAAHAAgAAAAxAAsAAAAAAAkAAAAxAAwAAAAAAAkAAAAxAA0AAAAAAAkAAAAxAA4AAAAAAAkAAAAxAA8AAAAAAAkAAAAxABAAAAAAAAkAAAAxABEAAAAAAAkAAAAxABIAAAAAAAkAAAAxABMAAAACAAIAAAAxABQAAAACAAMAAAAxABUAAAACAAQAAAAyAAoAAAAIAAgAAAAyAAsAAAAAAAkAAAAyAAwAAAAAAAkAAAAyAA0AAAAAAAkAAAAyAA4AAAAAAAkAAAAyAA8AAAAAAAkAAAAyABAAAAAAAAkAAAAyABEAAAAAAAkAAAAyABIAAAAAAAkAAAAyABMAAAAGAAYAACAzAAoAAAAJAAgAAAAzAAsAAAAAAAkAAAAzAAwAAAAAAAkAAAAzAA0AAAAAAAkAAAAzAA4AAAAAAAkAAAAzAA8AAAAAAAkAAAAzABAAAAAAAAkAAAAzABEAAAAAAAkAAAAzABIAAAAAAAkAAAAzABMAAAACAAIAAAAzABQAAAACAAMAAAAzABUAAAACAAQAAAA0AAsAAAAAAAkAAAA0AAwAAAAAAAkAAAA0AA0AAAAAAAkAAAA0AA4AAAAAAAkAAAA0AA8AAAAAAAkAAAA0ABAAAAAAAAkAAAA0ABEAAAAAAAkAAAA0ABIAAAAAAAkAAAA0ABMAAAAGAAYAACA1AAsAAAAAAAkAAAA1AAwAAAAAAAkAAAA1AA0AAAAAAAkAAAA1AA4AAAAAAAkAAAA1AA8AAAAAAAkAAAA1ABAAAAAAAAkAAAA1ABEAAAAAAAkAAAA1ABIAAAAAAAkAAAA1ABMAAAAEAAYAACA2AAsAAAAAAAkAAAA2AAwAAAAAAAkAAAA2AA0AAAAAAAkAAAA2AA4AAAAAAAkAAAA2AA8AAAAAAAkAAAA2ABAAAAAAAAkAAAA2ABEAAAAAAAkAAAA2ABIAAAAAAAkAAAA2ABMAAAACAAIAAAA2ABQAAAACAAMAAAA2ABUAAAACAAQAAAA3AAsAAAAAAAkAAAA3AAwAAAAAAAkAAAA3AA0AAAAAAAkAAAA3AA4AAAAAAAkAAAA3AA8AAAAAAAkAAAA3ABAAAAAAAAkAAAA3ABEAAAAAAAkAAAA3ABIAAAAAAAkAAAA3ABMAAAAGAAYAACA4AAsAAAAAAAkAAAA4AAwAAAAAAAkAAAA4AA0AAAAAAAkAAAA4AA4AAAAAAAkAAAA4AA8AAAAAAAkAAAA4ABAAAAAAAAkAAAA4ABEAAAAAAAkAAAA4ABIAAAAAAAkAAAA4ABMAAAAAAAkAAAAqAAcAAAAAAAUAAAAqAAgAAAAAAAYAAAAqAAkAAAAAAAcAAAArAAcAAAABAAUAAAArAAgAAAABAAYAAAArAAkAAAABAAcAAAAsAAcAAAACAAUAAAAsAAgAAAACAAYAAAAsAAkAAAACAAcAAAAtAAcAAAADAAUAAAAtAAgAAAADAAYAAAAtAAkAAAADAAcAAAA5AAsAAAAAAAkAAAA6AAsAAAAAAAkAAAA7AAsAAAAAAAkAAAA7AAwAAAAAAAkAAAA7AA0AAAAAAAkAAAA7AA4AAAAAAAkAAAA7AA8AAAAAAAkAAAA7ABAAAAAAAAkAAAA7ABEAAAAAAAkAAAA7ABIAAAAAAAkAAAA6ABIAAAAAAAkAAAA5ABIAAAAAAAkAAAA5ABMAAAAAAAkAAAA5ABEAAAAAAAkAAAA5ABAAAAAAAAkAAAA6ABAAAAAAAAkAAAA5AAwAAAAAAAkAAAA5AA0AAAAAAAkAAAA5AA4AAAAAAAkAAAA5AA8AAAAAAAkAAAA6AAwAAAAAAAkAAAA6AA0AAAAAAAkAAAA6AA4AAAAAAAkAAAA6AA8AAAAAAAkAAAA6ABEAAAAAAAkAAAA8AAsAAAAAAAkAAAA9AAsAAAAAAAkAAAA+AAsAAAAAAAkAAAA/AAsAAAAAAAkAAABAAAsAAAAAAAkAAABBAAsAAAAAAAkAAABCAAsAAAAAAAkAAABDAAsAAAAAAAkAAABEAAsAAAAAAAkAAABFAAsAAAAAAAkAAABGAAsAAAAAAAkAAABHAAsAAAAAAAkAAABIAAsAAAAAAAkAAABJAAsAAAAAAAkAAABKAAsAAAAAAAkAAABLAAsAAAAAAAkAAABMAAsAAAAAAAkAAABNAAsAAAAAAAkAAABOAAsAAAAAAAkAAABPAAsAAAAAAAkAAABQAAsAAAAAAAkAAABRAAsAAAAAAAkAAABSAAsAAAAAAAkAAABTAAsAAAAAAAkAAAA+AAoAAAAGAAYAAAA/AAoAAAAKAAgAAABAAAoAAAALAAgAAABBAAoAAAAMAAgAAABCAAoAAAANAAgAAABDAAoAAAAOAAgAAABEAAoAAAAPAAgAAABFAAoAAAAQAAgAAABGAAoAAAARAAgAAABHAAoAAAAEAAYAAABIAAoAAAAEAAYAAABJAAoAAAAFAAYAAABKAAoAAAAGAAYAAABLAAoAAAAEAAYAAABMAAoAAAAFAAYAAABNAAoAAAAGAAYAAABOAAoAAAAEAAYAAABPAAoAAAAFAAYAAABQAAoAAAAGAAYAAABRAAoAAAAEAAYAAABSAAoAAAAFAAYAAABTAAoAAAAGAAYAAAA8AAwAAAAAAAkAAAA9AAwAAAAAAAkAAAA+AAwAAAAAAAkAAAA/AA0AAAAAAAkAAABAAA0AAAAAAAkAAABBAA0AAAAAAAkAAABCAA0AAAAAAAkAAABDAA0AAAAAAAkAAABEAA4AAAAAAAkAAABFAA4AAAAAAAkAAABGAA4AAAAAAAkAAABHAA4AAAAAAAkAAABIAA4AAAAAAAkAAABJAA4AAAAAAAkAAABKAA4AAAAAAAkAAABLAA8AAAAAAAkAAABMAA8AAAAAAAkAAABNAA8AAAAAAAkAAABOAA8AAAAAAAkAAABPAA8AAAAAAAkAAABQAA8AAAAAAAkAAABRAA8AAAAAAAkAAABSAA8AAAAAAAkAAABTAA8AAAAAAAkAAABTAA4AAAAAAAkAAABTAA0AAAAAAAkAAABTAAwAAAAAAAkAAAA8AA0AAAAAAAkAAAA8AA4AAAAAAAkAAAA8AA8AAAAAAAkAAAA8ABAAAAAAAAkAAAA8ABEAAAAAAAkAAAA8ABIAAAAAAAkAAAA9AA0AAAAAAAkAAAA9AA4AAAAAAAkAAAA9AA8AAAAAAAkAAAA9ABAAAAAAAAkAAAA9ABEAAAAAAAkAAAA9ABIAAAAAAAkAAAA+AA0AAAAAAAkAAAA+AA4AAAAAAAkAAAA+AA8AAAAAAAkAAAA+ABAAAAAAAAkAAAA+ABEAAAAAAAkAAAA+ABIAAAAAAAkAAAA/AAwAAAAAAAkAAAA/AA4AAAAAAAkAAAA/AA8AAAAAAAkAAAA/ABAAAAAAAAkAAAA/ABEAAAAAAAkAAAA/ABIAAAAAAAkAAABAAAwAAAAAAAkAAABAAA4AAAAAAAkAAABAAA8AAAAAAAkAAABAABAAAAAAAAkAAABAABEAAAAAAAkAAABAABIAAAAAAAkAAABBAAwAAAAAAAkAAABBAA4AAAAAAAkAAABBAA8AAAAAAAkAAABBABAAAAAAAAkAAABBABEAAAAAAAkAAABBABIAAAAAAAkAAABCAAwAAAAAAAkAAABCAA4AAAAAAAkAAABCABEAAAAAAAkAAABCABIAAAAAAAkAAABDAAwAAAAAAAkAAABDAA4AAAAAAAkAAABDABEAAAAAAAkAAABDABIAAAAAAAkAAABEAAwAAAAAAAkAAABEAA0AAAAAAAkAAABEABEAAAAAAAkAAABEABIAAAAAAAkAAABFAAwAAAAAAAkAAABFAA0AAAAAAAkAAABFABEAAAAAAAkAAABFABIAAAAAAAkAAABGAAwAAAAAAAkAAABGAA0AAAAAAAkAAABGAA8AAAAAAAkAAABGABAAAAAAAAkAAABGABEAAAAAAAkAAABGABIAAAAAAAkAAABHAAwAAAAAAAkAAABHAA0AAAAAAAkAAABHAA8AAAAAAAkAAABHABAAAAAAAAkAAABHABEAAAAAAAkAAABHABIAAAAAAAkAAABIAAwAAAAAAAkAAABIAA0AAAAAAAkAAABIAA8AAAAAAAkAAABIABAAAAAAAAkAAABIABEAAAAAAAkAAABIABIAAAAAAAkAAABJAAwAAAAAAAkAAABJAA0AAAAAAAkAAABJAA8AAAAAAAkAAABJABAAAAAAAAkAAABJABEAAAAAAAkAAABJABIAAAAAAAkAAABKAAwAAAAAAAkAAABKAA0AAAAAAAkAAABKAA8AAAAAAAkAAABKABAAAAAAAAkAAABKABEAAAAAAAkAAABKABIAAAAAAAkAAABLAAwAAAAAAAkAAABLAA0AAAAAAAkAAABLAA4AAAAAAAkAAABLABAAAAAAAAkAAABLABEAAAAAAAkAAABLABIAAAAAAAkAAABMAAwAAAAAAAkAAABMAA0AAAAAAAkAAABMAA4AAAAAAAkAAABMABAAAAAAAAkAAABMABEAAAAAAAkAAABMABIAAAAAAAkAAABNAAwAAAAAAAkAAABNAA0AAAAAAAkAAABNAA4AAAAAAAkAAABNABAAAAAAAAkAAABNABEAAAAAAAkAAABNABIAAAAAAAkAAABOAAwAAAAAAAkAAABOAA0AAAAAAAkAAABOAA4AAAAAAAkAAABOABAAAAAAAAkAAABOABEAAAAAAAkAAABOABIAAAAAAAkAAABPAAwAAAAAAAkAAABPAA0AAAAAAAkAAABPAA4AAAAAAAkAAABPABAAAAAAAAkAAABPABEAAAAAAAkAAABPABIAAAAAAAkAAABQAAwAAAAAAAkAAABQAA0AAAAAAAkAAABQAA4AAAAAAAkAAABQABAAAAAAAAkAAABQABEAAAAAAAkAAABQABIAAAAAAAkAAABRAAwAAAAAAAkAAABRAA0AAAAAAAkAAABRAA4AAAAAAAkAAABRABAAAAAAAAkAAABRABEAAAAAAAkAAABRABIAAAAAAAkAAABSAAwAAAAAAAkAAABSAA0AAAAAAAkAAABSAA4AAAAAAAkAAABSABAAAAAAAAkAAABSABEAAAAAAAkAAABSABIAAAAAAAkAAABTABAAAAAAAAkAAABTABEAAAAAAAkAAABTABIAAAAAAAkAAABCAA8AAAAAAAkAAABCABAAAAAAAAkAAABDAA8AAAAAAAkAAABDABAAAAAAAAkAAABEAA8AAAAAAAkAAABEABAAAAAAAAkAAABFAA8AAAAAAAkAAABFABAAAAAAAAkAAAA9AAoAAAAFAAYAAABAAAQAAAALAAIAAABAAAUAAAALAAMAAABAAAYAAAALAAQAAABBAAMAAAAMAAEAAABBAAQAAAAMAAIAAABBAAUAAAAMAAMAAABBAAYAAAAMAAQAAABBAAcAAAAMAAUAAABBAAgAAAAMAAYAAABCAAIAAAANAAAAAABCAAMAAAANAAEAAABCAAQAAAANAAIAAABCAAUAAAANAAMAAABCAAYAAAANAAQAAABCAAcAAAANAAUAAABCAAgAAAANAAYAAABCAAkAAAANAAcAAABDAAIAAAAOAAAAAABDAAMAAAAOAAEAAABDAAQAAAAOAAIAAABDAAUAAAAOAAMAAABDAAYAAAAOAAQAAABDAAcAAAAOAAUAAABDAAgAAAAOAAYAAABDAAkAAAAOAAcAAABEAAIAAAAPAAAAAABEAAMAAAAPAAEAAABEAAQAAAAPAAIAAABEAAUAAAAPAAMAAABEAAYAAAAPAAQAAABEAAcAAAAPAAUAAABEAAgAAAAPAAYAAABEAAkAAAAPAAcAAABFAAMAAAAQAAEAAABFAAQAAAAQAAIAAABFAAUAAAAQAAMAAABFAAYAAAAQAAQAAABFAAcAAAAQAAUAAABFAAgAAAAQAAYAAABGAAQAAAARAAIAAABGAAUAAAARAAMAAAA1AAoAAAAEAAYAAAA2AAoAAAAFAAYAAAA3AAoAAAAGAAYAAAA6AAoAAAAEAAYAAAA7AAoAAAAFAAYAAAA8AAoAAAAGAAYAAAA=")
tile_set = SubResource("TileSet_c0yjq")

[connection signal="body_entered" from="Blocks/1/in" to="." method="_on_in_body_entered"]
[connection signal="body_entered" from="Blocks/3/in_3" to="." method="_on_in_3_body_entered"]
[connection signal="body_exited" from="Blocks/4/out_4" to="." method="_on_out_4_body_exited"]
[connection signal="body_entered" from="Death/death" to="." method="_on_death_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Next" to="." method="_on_next_body_entered"]
